--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ AZURE_STORAGE_CONTAINER_NAME="documents"
 AZURE_AD_CLIENT_ID=<your_client_id>
 AZURE_AD_CLIENT_SECRET=<your_client_secret>
 AZURE_AD_TENANT_ID=<your_tenant_id>
+
+# Next Auth
+NEXTAUTH_SECRET=<your_random_secret>
+NEXTAUTH_URL=http://localhost:3000
