feat: add dockerfile and github actions

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,8 @@ AZURE_AD_TENANT_ID=<your_tenant_id>
 
 # Next Auth
 NEXTAUTH_SECRET=<your_random_secret>
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=wonderfulsmoke-09a3dd49.uksouth.azurecontainerapps.io
+
+# Azure container registry
+ACR_USERNAME=<your_acs_username>
+ACR_PASSWORD=<your_acs_password>
