fix: update example env file

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,4 @@ AZURE_AD_TENANT_ID=<your_tenant_id>
 
 # Next Auth
 NEXTAUTH_SECRET=<your_random_secret>
-NEXTAUTH_URL=wonderfulsmoke-09a3dd49.uksouth.azurecontainerapps.io
-
-# Azure container registry
-ACR_USERNAME=<your_acs_username>
-ACR_PASSWORD=<your_acs_password>
+NEXTAUTH_URL=<app_url>.uksouth.azurecontainerapps.io
