--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@azure/msal-node": "^2.16.2",
     "@azure/storage-blob": "^12.26.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-pdf-viewer/core": "^3.12.0",
